conduit/conduit-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: matrix
  name: matrix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matrix
      tier: backend
  template:
    metadata:
      labels:
        app: matrix
        tier: backend
    spec:
      volumes:
        - name: matrix-lh
          persistentVolumeClaim:
            claimName: matrix1-lh
        - name: config-conduit
          configMap:
            name: config-conduit
            items:
              - key: config
                path: conduit.conf
      containers:
        - name: conduit
          image: matrixconduit/matrix-conduit:latest
          ports:
            - containerPort: 6167
          volumeMounts:
            - name: matrix-lh
              mountPath: /var/lib/matrix-conduit/
            - name: config-conduit
              mountPath: /etc/conduit.toml
          resources:
            requests:
              cpu: "10m"
              memory: "200Mi"
            limits:
              cpu: "1000m"
              memory: "200Mi"
