conduit/nginx-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: matrix
  name: nginx-matrix
  labels:
    tier: matrix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matrix
      tier: matrix
  template:
    metadata:
      labels:
        app: matrix
        tier: matrix
    spec:
      volumes:
        - name: config-matrix
          configMap:
            name: config-matrix
            items:
              - key: config
                path: site.conf
        - name: cache
          emptyDir:
            sizeLimit: 500Mi
        - name: run
          emptyDir:
            sizeLimit: 1Mi
      containers:
        - name: matrix-nginx
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-matrix
              mountPath: /etc/nginx/conf.d
            - name: cache
              mountPath: /var/cache/nginx
            - name: run
              mountPath: /var/run
          resources:
            requests:
              cpu: "10m"
              memory: "100Mi"
            limits:
              cpu: "300m"
              memory: "100Mi"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
