conduit/matrix_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: matrix
  name: matrix
  labels:
    tier: backend
spec:
  selector:
    app: matrix
    tier: backend
  ports:
    - protocol: TCP
      port: 6167
